# cuda-sudoku-solver

./: CMakeLists.txt  README.md
input/: hard-2.txt  impossible.txt
src/: main.cpp  sudoku.cu  sudoku.cuh  sudoku_cpu.cpp  sudoku_cpu.h
